# github-repository-archive-tool

./: .dockerignore  .gitignore  .python-version  CODEOWNERS  Dockerfile  Makefile  README.md  mkdocs.yml  notes.md  pyproject.toml  start_repo_tool.sh
.github/workflows/: ci.yml  codeql.yml  mega-linter.yml
RepoArchiveTool/: apiScript.py  app.py
RepoArchiveTool/templates/: base.html  index.html
config/: README.md  feature.json
docs/: index.md
docs/diagrams/: architecture.drawio
docs/rework_designs/: .$repo_archive_rework.drawio.bkp
githubapiapp/: __init__.py  testingCleanup.py
mkdocs_deployment/: 404.html  index.html
mkdocs_deployment/documentation/: index.html
mkdocs_deployment/search/: search_index.json
repoarchivetool/: apiScript.py  api_controller.py  api_interface.py  app.py  authentication_interface.py  data_retrieval.py  storage_interface.py
repoarchivetool/oldUI/: index.html
repoarchivetool/templates/: accessToken.html  access_token.html  base-navless.html  base.html  baseNew.html  confirmAction.html  error.html  findRepositories.html  firstTimeSetup.html  index.html  indexNew.html  insertTestDataConfirmation.html  manageRepositories.html  manageRepositoriesNew.html  recentlyArchived.html  setExemptDate.html  success.html
repoarchivetool/test_data/: test_recently_added.html  test_repositories.json
terraform/authentication/: README.md  authentication.tf  main.tf  outputs.tf  variables.tf
terraform/service/: .terraform.lock.hcl  README.md  alb.tf  data.tf  main.tf  outputs.tf  variables.tf
terraform/storage/: README.md  main.tf  (+3 more)
(+15 files in other folders)
