[tool.poetry]
name = "RepoArchiveTool"
version = "0.1.0"
description = ""
authors = ["Kieran Pritchard <kieran.pritchard@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
datetime = "^5.4"
flask = "^3.0.2"
python-dateutil = "^2.9.0.post0"
jwt = "^1.3.1"
boto3 = "^1.34.118"
github-api-toolkit = {git = "https://github.com/ONS-Innovation/github-api-package.git", rev = "v1.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
